--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "12.18.3",
-    "npm": "6.14.8"
+    "node": "12.x",
+    "npm": "6.x"
   },
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION = false npm install  --prefix client && npm run build --prefix client"   
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  --prefix client && npm run build --prefix client"   
   },
   "author": "",
   "license": "ISC",
